# JwtCracker

./: Cargo.toml  LICENSE  Readme.md  build.rs
.github/workflows/: release.yml  release_part2.yml  rust.yml
src/: Spinner.rs  cli.rs  combination_generator.rs  gui.rs  jwt.rs  main.rs  spinner.rs
src/ui/: main_window.rs  mod.rs
src/utils/: jwt.rs  mod.rs
