[package]
name = "jwt_test"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
serde_json = "1.0.143"
hmac = "0.13.0-rc.0"
sha2 = "0.11.0-rc.0"
jwt = "0.16.0"
base64 = "0.22.1"
chars = "0.7.0"
itertools = "0.14.0"
rayon = "1.11.0"
indicatif = "0.18.0"
tokio = { version = "1.47.1", features = ["default", "rt", "time"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
