[package]
name = "JWTCracker"
version = "0.2.2"
edition = "2024"

[dependencies]
jsonwebtoken = "9.3.1"
serde_json = "1.0.143"
hmac = "0.13.0-rc.0"
sha2 = "0.11.0-rc.0"
base64 = "0.22.1"
rayon = "1.11.0"
indicatif = "0.18.0"
rand = "0.9.2"
clap = { version = "4.5.46", features = ["derive"] }
eframe = "0.32.1"
egui = "0.32.1"
egui_extras = { version = "0.32.1", features = ["syntect"] }
crossbeam-channel = "0.5.15"
epaint = "0.32.1"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "JwtCrackerGUI"
path = "src/gui.rs"

[[bin]]
name = "JwtCrackerCLI"
path = "src/cli.rs"